Learning Stream to Array and types of sout